--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 			<input type="text" id="display">
 			<div id = "input-box">
 				<h2>Put your guess here</h2>
-				<input type="text" id="user-guess">
+				<input type="number" id="user-guess" required>
+				<div id ="thermometer">
+				<div id="mercury"></div>
+			</div>
 			</div>
 			<div id ="button-group">
-				<button class="start-mode">Submit</button>
+				<button>Submit</button>
 				<button>New Game</button>
 			</div>
+			
 		</section>
 		<footer>
 		</footer>
