--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Hot or Cold!!</title>
-		<link type="text/css" rel="stylesheet" href="main.css"/>
+		<link type="text/css" rel="stylesheet" href="style/main.css"/>
 	</head>
 	<body>
 		<header>
@@ -27,6 +27,6 @@
 		<footer>
 		</footer>
 
-		 <script type="text/javascript" src="script.js"></script>
+		 <script type="text/javascript" src="javascript/app.js"></script>
 	</body>
 </html>
