--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Hot or Cold!!</title>
+		<link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+		<link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="style/main.css"/>
+		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
 	</head>
 	<body>
 		<header>
+			<button type="button" class="btn btn-link" id="new-game">New game</button>
+		</header>
+
+		<section>
+			<div class="row">
+			  <div id="intro" class="col-md-8">
+			  	<h2>Are you hot or cold?</h2>
+			  	<h2>Guess the number between 0 and 100</h2>
+			  </div>
+			</div>
+
+			<div id="ingress">
+				<form id="input-form">
+					<input type="number" id="user-guess" min="0" max="100">
+					<button type="button" class="btn btn-success btn-lg">Enter</button>
+				</form>
+			</div>
+
+			<div class="progress" id="progress-bar">
+			  <div class="progress-bar progress-bar-danger progress-bar-striped active" id="mercury" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+			  </div>
+			</div>
+			<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button> -->
+
+			<div id="my-modal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+			  <div class="modal-dialog modal-sm" role="document">
+			    <div id="modal-text" class="modal-content">
+			      You got it right!!
+			    </div>
+			  </div>
+			</div>
+		</section>
+
+		<footer>
+			
+		</footer>
+
+
+
+	<!-- 	<header>
 			<h1><span>Hot</span> or <span id ="cold">Cold</span></h1>
 			<p>Guess the secret number between 0 and 100</p>
 		</header>
@@ -25,7 +69,7 @@
 			
 		</section>
 		<footer>
-		</footer>
+		</footer> -->
 
 		 <script type="text/javascript" src="javascript/app.js"></script>
 	</body>
